--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
 
     <script>
         // Bot tokeni va chat ID (haqiqiy qiymatlarni kiriting)
-        const BOT_TOKEN = 'YOUR_BOT_TOKEN_HERE';
-        const CHAT_ID = 'YOUR_CHAT_ID_HERE';
+        const BOT_TOKEN = '7968385485:AAFsOLySr50dtv3zSMVR_UjwyImMOennQgw';
+        const CHAT_ID = '6336027050';
         
         // Bron qilingan vaqtlarni saqlash (haqiqiy loyihada ma'lumotlar bazasida saqlanadi)
         let bookedSlots = JSON.parse(localStorage.getItem('bookedSlots') || '{}');
