--- a/index.html
+++ b/index.html
@@ -1,121 +1,131 @@
 <!DOCTYPE html>
 <html lang="uz">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dr. Mushtariy - Bron qilish</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: 'Inter', sans-serif;
-            background: linear-gradient(135deg, #8e2de2, #4a00e0);
-            color: #222;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dr. Mushtariy - Bron qilish</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(135deg, #a18cd1, #fbc2eb);
+      color: #222;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
 
-        .container {
-            max-width: 500px;
-            margin: 0 auto;
-            padding: 30px 20px;
-            background: white;
-            border-radius: 24px;
-            box-shadow: 0 12px 32px rgba(0, 0, 0, 0.1);
-            margin-top: 40px;
-        }
+    .container {
+      width: 90%;
+      max-width: 480px;
+      padding: 40px 30px;
+      background: #fff;
+      border-radius: 24px;
+      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
+    }
 
-        h1 {
-            text-align: center;
-            font-size: 24px;
-            color: #4a00e0;
-            margin-bottom: 10px;
-        }
+    h1 {
+      text-align: center;
+      font-size: 28px;
+      color: #7b4397;
+      margin-bottom: 10px;
+    }
 
-        p.description {
-            text-align: center;
-            font-size: 16px;
-            color: #555;
-            margin-bottom: 30px;
-        }
+    p.description {
+      text-align: center;
+      font-size: 16px;
+      color: #555;
+      margin-bottom: 30px;
+    }
 
-        label {
-            display: block;
-            margin-bottom: 6px;
-            font-weight: 600;
-            color: #333;
-        }
+    label {
+      display: block;
+      margin-bottom: 6px;
+      font-weight: 600;
+      color: #444;
+    }
 
-        input, textarea, select {
-            width: 100%;
-            padding: 12px;
-            margin-bottom: 20px;
-            border: 1px solid #ccc;
-            border-radius: 12px;
-            font-size: 15px;
-            font-family: inherit;
-        }
+    input,
+    textarea,
+    select {
+      width: 100%;
+      padding: 14px;
+      margin-bottom: 22px;
+      border: 1px solid #ddd;
+      border-radius: 12px;
+      font-size: 15px;
+      font-family: inherit;
+      background-color: #fdfdfd;
+    }
 
-        button {
-            width: 100%;
-            padding: 14px;
-            font-size: 16px;
-            font-weight: bold;
-            border: none;
-            border-radius: 12px;
-            color: white;
-            background: linear-gradient(135deg, #8e2de2, #4a00e0);
-            cursor: pointer;
-            transition: background 0.3s;
-        }
+    input:focus,
+    textarea:focus,
+    select:focus {
+      border-color: #7b4397;
+      outline: none;
+      box-shadow: 0 0 0 3px rgba(123, 67, 151, 0.1);
+    }
 
-        button:hover {
-            background: linear-gradient(135deg, #7a1ecb, #3d00c0);
-        }
+    button {
+      width: 100%;
+      padding: 16px;
+      font-size: 17px;
+      font-weight: 600;
+      border: none;
+      border-radius: 14px;
+      color: white;
+      background: linear-gradient(135deg, #7b4397, #dc2430);
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
 
-        .footer {
-            text-align: center;
-            margin-top: 30px;
-            font-size: 14px;
-            color: #aaa;
-        }
+    button:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 10px 20px rgba(123, 67, 151, 0.2);
+    }
 
-        @media screen and (max-width: 480px) {
-            .container {
-                margin: 20px;
-            }
-        }
-    </style>
+    .footer {
+      text-align: center;
+      margin-top: 25px;
+      font-size: 14px;
+      color: #aaa;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Go‘zallikni biz bilan sayqallang</h1>
-        <p class="description">Hoziroq joyingizni bron qiling</p>
+  <div class="container">
+    <h1>Go‘zallikni biz bilan sayqallang</h1>
+    <p class="description">Hoziroq o‘zingizga qulay vaqtda bron qiling</p>
 
-        <form>
-            <label for="name">Ism va familiyangiz</label>
-            <input type="text" id="name" name="name" required>
+    <form>
+      <label for="name">Ism va familiyangiz</label>
+      <input type="text" id="name" name="name" required />
 
-            <label for="phone">Telefon raqamingiz</label>
-            <input type="tel" id="phone" name="phone" required>
+      <label for="phone">Telefon raqamingiz</label>
+      <input type="tel" id="phone" name="phone" required />
 
-            <label for="address">Yashash manzilingiz</label>
-            <textarea id="address" name="address" rows="3" required></textarea>
+      <label for="address">Yashash manzilingiz</label>
+      <textarea id="address" name="address" rows="3" required></textarea>
 
-            <label for="time">Band qilmoqchi bo‘lgan vaqt</label>
-            <select id="time" name="time" required>
-                <option value="">Vaqtni tanlang</option>
-                <option value="10:00">10:00</option>
-                <option value="11:00">11:00</option>
-                <option value="12:00">12:00</option>
-                <option value="13:00">13:00</option>
-                <option value="14:00">14:00</option>
-                <option value="15:00">15:00</option>
-                <option value="16:00">16:00</option>
-                <option value="17:00">17:00</option>
-            </select>
+      <label for="time">Band qilmoqchi bo‘lgan vaqt</label>
+      <select id="time" name="time" required>
+        <option value="">Vaqtni tanlang</option>
+        <option value="10:00">10:00</option>
+        <option value="11:00">11:00</option>
+        <option value="12:00">12:00</option>
+        <option value="13:00">13:00</option>
+        <option value="14:00">14:00</option>
+        <option value="15:00">15:00</option>
+        <option value="16:00">16:00</option>
+        <option value="17:00">17:00</option>
+      </select>
 
-            <button type="submit">Bron qilish</button>
-        </form>
+      <button type="submit">📋 Joyni bron qilish</button>
+    </form>
 
-        <div class="footer">© Dr. Mushtariy 2025</div>
-    </div>
+    <div class="footer">© Dr. Mushtariy 2025</div>
+  </div>
 </body>
 </html>
