--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background: url('https://images.unsplash.com/photo-1618477388954-7856ce7d89d9?ixlib=rb-4.0.3&auto=format&fit=crop&w=1470&q=80') no-repeat center center/cover;
+      background: url('https://images.unsplash.com/photo-1607082349566-187342175e2c?ixlib=rb-4.0.3&auto=format&fit=crop&w=1470&q=80') no-repeat center center/cover;
       color: #222;
       min-height: 100vh;
       display: flex;
@@ -19,7 +19,7 @@
 
     .container {
       width: 90%;
-      max-width: 480px;
+      max-width: 500px;
       padding: 40px 30px;
       background: rgba(255, 255, 255, 0.95);
       border-radius: 24px;
@@ -37,7 +37,14 @@
       text-align: center;
       font-size: 16px;
       color: #555;
-      margin-bottom: 30px;
+      margin-bottom: 20px;
+    }
+
+    .slogans {
+      text-align: center;
+      font-size: 14px;
+      color: #6a4c93;
+      margin-bottom: 20px;
     }
 
     label {
@@ -51,7 +58,7 @@
     textarea {
       width: 100%;
       padding: 14px;
-      margin-bottom: 22px;
+      margin-bottom: 20px;
       border: 1px solid #ddd;
       border-radius: 12px;
       font-size: 15px;
@@ -120,29 +127,16 @@
       text-align: center;
       color: #555;
     }
-
-    .stickers {
-      display: flex;
-      justify-content: center;
-      gap: 10px;
-      margin: 20px 0;
-    }
-
-    .stickers img {
-      width: 36px;
-      height: 36px;
-    }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>Go‘zallikni biz bilan sayqallang</h1>
     <p class="description">Sizning go‘zalligingiz – bizning ilhomimiz ✨</p>
-
-    <div class="stickers">
-      <img src="https://cdn-icons-png.flaticon.com/512/709/709699.png" alt="icon">
-      <img src="https://cdn-icons-png.flaticon.com/512/3209/3209447.png" alt="icon">
-      <img src="https://cdn-icons-png.flaticon.com/512/814/814513.png" alt="icon">
+    <div class="slogans">
+      <p>Yorqin teri — ishonchli kayfiyat.</p>
+      <p>Go‘zallik — bu sizga munosib parvarish.</p>
+      <p>Chiroyli bo‘ling, o‘zingiz uchun!</p>
     </div>
 
     <form>
@@ -167,7 +161,7 @@
         <div class="time-slot">17:00</div>
       </div>
 
-      <button type="submit">📋 Joyni bron qilish</button>
+      <button type="submit">Joyni bron qilish</button>
     </form>
 
     <div class="contact-info">
