--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
       background-color: #fdfdfd;
     }
 
+    input::placeholder,
+    textarea::placeholder {
+      color: #aaa;
+      font-style: italic;
+    }
+
     input:focus,
     textarea:focus {
       border-color: #7b4397;
@@ -137,19 +143,22 @@
       <p>Yorqin teri — ishonchli kayfiyat.</p>
       <p>Go‘zallik — bu sizga munosib parvarish.</p>
       <p>Chiroyli bo‘ling, o‘zingiz uchun!</p>
+      <p>Go‘zallik – bu o‘ziga bo‘lgan mehrdan boshlanadi.</p>
+      <p>Siz uchun eng nozik xizmatlar!</p>
+      <p>Iltimos band qilishda e'tiborli bo'ling </p>
     </div>
 
     <form>
       <label for="name">Ism va familiyangiz</label>
-      <input type="text" id="name" name="name" required />
+      <input type="text" id="name" name="name" required placeholder="Majburiy maydon" />
 
       <label for="phone">Telefon raqamingiz</label>
-      <input type="tel" id="phone" name="phone" required />
+      <input type="tel" id="phone" name="phone" required placeholder="Majburiy maydon" />
 
       <label for="address">Yashash manzilingiz</label>
-      <textarea id="address" name="address" rows="3" required></textarea>
+      <textarea id="address" name="address" rows="3" required placeholder="Majburiy maydon"></textarea>
 
-      <label>Band qilmoqchi bo‘lgan vaqt</label>
+      <label>Band qilmoqchi bo‘lgan vaqtingiz</label>
       <div class="time-slots" id="timeSlots">
         <div class="time-slot">10:00</div>
         <div class="time-slot">11:00</div>
