--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
     }
 
     input,
-    textarea {
+    textarea,
+    select {
       width: 100%;
       padding: 14px;
       margin-bottom: 20px;
@@ -73,7 +74,8 @@
     }
 
     input:focus,
-    textarea:focus {
+    textarea:focus,
+    select:focus {
       border-color: #7b4397;
       outline: none;
       box-shadow: 0 0 0 3px rgba(123, 67, 151, 0.1);
@@ -141,11 +143,7 @@
     <p class="description">Sizning go‘zalligingiz – bizning ilhomimiz ✨</p>
     <div class="slogans">
       <p>Yorqin teri — ishonchli kayfiyat.</p>
-      <p>Go‘zallik — bu sizga munosib parvarish.</p>
-      <p>Chiroyli bo‘ling, o‘zingiz uchun!</p>
       <p>Go‘zallik – bu o‘ziga bo‘lgan mehrdan boshlanadi.</p>
-      <p>Siz uchun eng nozik xizmatlar!</p>
-      <p>Iltimos band qilishda e'tiborli bo'ling </p>
     </div>
 
     <form>
@@ -157,6 +155,9 @@
 
       <label for="address">Yashash manzilingiz</label>
       <textarea id="address" name="address" rows="3" required placeholder="Majburiy maydon"></textarea>
+
+      <label for="date">Sanani tanlang</label>
+      <input type="date" id="date" name="date" required placeholder="Majburiy maydon" />
 
       <label>Band qilmoqchi bo‘lgan vaqtingiz</label>
       <div class="time-slots" id="timeSlots">
