--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       📞 Aloqa uchun: <strong>+998 94 143 28 28</strong>
     </div>
 
-    <div class="footer">© Dr. Mushtariy 2025</div>
+    <div class="footer">© urinboy.umarovich </div>
   </div>
 
   <script>
