--- a/index.html
+++ b/index.html
@@ -17,13 +17,6 @@
             min-height: 100vh;
             color: #333;
         }
-          <div class="container">
-    <h1>Go‘zallikni biz bilan sayqallang</h1>
-    <p class="description">Sizning go‘zalligingiz – bizning ilhomimiz ✨</p>
-    <div class="slogans">
-      <p>Yorqin teri — ishonchli kayfiyat.</p>
-      <p>Go‘zallik – bu o‘ziga bo‘lgan mehrdan boshlanadi.</p>
-    </div>
         .container {
             max-width: 500px;
             margin: 20px auto;
@@ -357,7 +350,7 @@
 📅 <b>Sana:</b> ${date}
 🕐 <b>Vaqt:</b> ${time}
 
-<b>Bronni bekor qilish uchun:</b> /cancel_${slotKey.replace('_', '_')}
+<b>Bronni bekor qilish uchun:</b> /cancel_${phone.replace('_', '_')}
             `;
             
             const submitBtn = document.getElementById('submitBtn');
