--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 📅 <b>Sana:</b> ${date}
 🕐 <b>Vaqt:</b> ${time}
 
-<b>Bronni bekor qilish uchun:</b> /cancel_${phone.replace('_', '_')}
+<b>Bronni bekor qilish uchun:</b> /cancel_${name.replace('_', '_')}
             `;
             
             const submitBtn = document.getElementById('submitBtn');
